--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,13 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Build
+        run: npm run build
+      
+      - name: Test
+        run: npm test
           echo Add other actions to build,
           echo test, and deploy your project.
